Hide invalid feedback on hidden fields

--- a/app/assets/stylesheets/verification.scss
+++ b/app/assets/stylesheets/verification.scss
@@ -159,3 +159,7 @@ $success-base64: "data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' w
 .collapsed[data-toggle="collapse"] .fa.fa-chevron-down {
   transform: rotate(180deg);
 }
+
+.hidden .invalid-feedback {
+  display: none;
+}
