add step to document type

--- a/app/views/admin/document_types/index.slim
+++ b/app/views/admin/document_types/index.slim
@@ -19,6 +19,7 @@
           td = document_type.title
           td = document_type.file_type
           td = document_type.position
+          td = document_type.step
           td = document_type.placeholder_photo
           td = content_type_to_extensions(document_type.content_types)
           td
