add step to document type

--- a/app/views/client/verifications/step3.html+mobile.slim
+++ b/app/views/client/verifications/step3.html+mobile.slim
@@ -15,7 +15,7 @@
   = f.input :document_type, as: :hidden
   = f.input :document_number, as: :hidden
   = f.simple_fields_for :verification_documents do |document|
-   -if document.object.document_type.position == 1
+   -if document.object.document_type.step == 3
       = render 'document_field_mobile', document: document
    -else
      = document.input :file_cache, as: :hidden
