Improve client/verifications

--- a/app/views/client/verifications/step3.html+mobile.slim
+++ b/app/views/client/verifications/step3.html+mobile.slim
@@ -15,9 +15,9 @@
   = f.input :document_type, as: :hidden
   = f.input :document_number, as: :hidden
   = f.simple_fields_for :verification_documents do |document|
-   -if document.object.document_type.position == 1
+   - if DOCUMENT_POSITIONS_BY_STEP.fetch(document.object.document_type.position)==3
       = render 'document_field_mobile', document: document
-   -else
+   - else
      = document.input :file_cache, as: :hidden
      = document.input :document_type_id, as: :hidden
   = render 'photo_instruction', first_point: 'Убедитесь, что документ на фото размещен полностью, края не обрезаны, информация хорошо считывается'
