--- a/app/views/client/verifications/step4.html+mobile.slim
+++ b/app/views/client/verifications/step4.html+mobile.slim
@@ -16,7 +16,7 @@
   = f.input :document_number, as: :hidden
 
   = f.simple_fields_for :verification_documents do |document|
-    - if DOCUMENT_POSITIONS_BY_STEP.fetch(document.object.document_type.position)==4
+    - if Verification::DOCUMENT_POSITIONS_BY_STEP.fetch(document.object.document_type.position)==4
        = render 'document_field_mobile', document: document
     - else
       = document.input :file_cache, as: :hidden
