fix: Content changes. Remove back from step1. Fix document field caption

--- a/app/views/client/verifications/new.html+mobile.slim
+++ b/app/views/client/verifications/new.html+mobile.slim
@@ -16,7 +16,7 @@
       li.font-weight-semibold.text-primary.py-1
         span.text-body Сделать фото действительного документа, удостоверяющего личность
       li.font-weight-semibold.text-primary.py-1
-        span.text-body Сделать селфи с документом и листком бумаги, где написаны текущая дата и "Bitzlato"
+        span.text-body Сделать селфи с документом и листком бумаги, где написаны текущая дата и "для криптобанка Bitzlato"
 
     .d-flex.align-items-center.justify-content-center.my-3
       .px-4
