--- a/app/views/client/verifications/_document_field_mobile.slim
+++ b/app/views/client/verifications/_document_field_mobile.slim
@@ -15,11 +15,11 @@ div id="#{element_id}" data-file-input=""
   div data-controls=""
     .d-flex
       label.btn.btn-primary.flex-grow-1.mr-4
-        input.custom-file-input.position-absolute type="file"  capture="user" style="height: 0" data-index=document.index value=document.object.file name=document.object_name+'[file]' accept=document.object.document_type.content_types.join(',') data-input=""
+        input.custom-file-input.position-absolute type="file" capture="filesystem" style="height: 0" data-index=document.index value=document.object.file name=document.object_name+'[file]' accept=document.object.document_type.content_types.join(',') data-input=""
         = 'Загрузить файл'
 
       label.btn.btn-primary.flex-grow-1
-        input.custom-file-input.position-absolute type="file"  capture="user" style="height: 0" data-input=""
+        input.custom-file-input.position-absolute type="file" capture="user" style="height: 0" data-input=""
         = 'Открыть камеру'
 
   div style="display: none" data-filename-container=""
