fix: Add bg on fixed footer. Remove error on upload photo. Fix input file caption

--- a/app/assets/stylesheets/verification.scss
+++ b/app/assets/stylesheets/verification.scss
@@ -163,3 +163,7 @@ $success-base64: "data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' w
 .hidden .invalid-feedback {
   display: none;
 }
+
+.footer-submit .form-group {
+  margin: 0;
+}
