--- a/app/views/client/verifications/step2.html+mobile.slim
+++ b/app/views/client/verifications/step2.html+mobile.slim
@@ -23,7 +23,7 @@
   .mt-5
     = f.input :document_number
 
-  .container.fixed-bottom.pb-4.d-flex
+  .container.fixed-bottom.pt-2.pb-4.d-flex.bg-white.footer-submit
     = f.input :next_step, as: :hidden, input_html: { value: 3 }
     button type="submit" value='back' name='submit' class='btn btn-outline-primary font-weight-semibold w-100 mr-4' style='max-width: 130px' Назад
     = f.submit 'Продолжить', class: 'btn btn-primary w-100', data: { 'disable-with' => 'Отправляю..' }
