--- a/app/views/client/verifications/new.html+desktop.slim
+++ b/app/views/client/verifications/new.html+desktop.slim
@@ -27,8 +27,9 @@
           = f.input :citizenship_country_iso_code,
                   as: :select,
                   collection: country_options_for_select,
+                  include_blank: false,
                   input_html: { class: 'custom-select' }
-          = f.input :birth_date, as: :date_picker, icons: :font_awesome
+          = f.input :birth_date, as: :date_picker, icons: :font_awesome, input_html: { placeholder: t('simple_form.placeholders.verification.birth_date')}
           = f.input :email, as: :email
 
     .col-lg-3.d-none.d-lg-block
