--- a/app/views/client/verifications/step1.html+mobile.slim
+++ b/app/views/client/verifications/step1.html+mobile.slim
@@ -23,7 +23,7 @@
           include_blank: false,
           input_html: { class: 'custom-select' }
   .position-relative
-    = f.input :birth_date, as: :date_picker, icons: :font_awesome
+    = f.input :birth_date, as: :date_picker, icons: :font_awesome, input_html: { placeholder: t('simple_form.placeholders.verification.birth_date') }
   = f.input :email, as: :email
 
   .container.fixed-bottom.pb-4.d-flex
