fix: step 1 content height

--- a/app/assets/stylesheets/verification.scss
+++ b/app/assets/stylesheets/verification.scss
@@ -167,3 +167,13 @@ $success-base64: "data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' w
 .footer-submit .form-group {
   margin: 0;
 }
+
+#step1 .form-group {
+  margin-bottom: 14px;
+}
+
+#step1 .form-control-label {
+  margin-bottom: 2px;
+  font-size: 13px;
+}
+
