--- a/app/views/client/verifications/step4.html+mobile.slim
+++ b/app/views/client/verifications/step4.html+mobile.slim
@@ -22,7 +22,7 @@
       = document.input :file_cache, as: :hidden
       = document.input :document_type_id, as: :hidden
 
-  = render 'photo_instruction', first_point: 'Убедитесь, что документ на фото размещен полностью, края не обрезаны, информация хорошо считывается'
+  = render 'photo_instruction', first_point: 'Убедитесь, что Ваше лицо и все детали документов на фото четко видны'
 
   .container.fixed-bottom.pt-2.pb-4.d-flex.bg-white.footer-submit
     = f.input :next_step, as: :hidden, input_html: { value: 5 }
