--- a/app/views/client/verifications/_document_field_mobile.slim
+++ b/app/views/client/verifications/_document_field_mobile.slim
@@ -4,7 +4,7 @@ p.mt-3.small.font-weight-semibold
   = document.object.document_type.title
 
 div id="#{element_id}" data-file-input=""
-  .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-4 style="height: 230px; border-style: dashed" class=((document.object.errors.full_messages.any?)? 'border-danger' : '')
+  .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-4 style="height: 230px; border-style: dashed"
     - if document.object.file.cached?
       = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}, style: 'display: none'
       img style="max-width: 80%; max-height: 100%;" data-preview="" src="/#{document.object.file.cache_path}"
@@ -14,11 +14,11 @@ div id="#{element_id}" data-file-input=""
 
   div data-controls="" style=(document.object.file.cached? ? 'display: none;' : '')
     .d-flex
-      label.btn.btn-primary.flex-grow-1.mb-0.mr-4 class=((document.object.errors.full_messages.any?)? 'border-danger' : '')
+      label.btn.btn-primary.flex-grow-1.mb-0.mr-4
         input.custom-file-input.position-absolute type="file" style="height: 0" data-index=document.index value=document.object.file name=document.object_name+'[file]' accept=document.object.document_type.content_types.join(',') data-input=""
         = 'Загрузить файл'
 
-      label.btn.btn-primary.flex-grow-1.mb-0 class=((document.object.errors.full_messages.any?)? 'border-danger' : '')
+      label.btn.btn-primary.flex-grow-1.mb-0
         input.custom-file-input.position-absolute type="file" capture="user" style="height: 0" data-input=""
         = 'Открыть камеру'
 
