--- a/app/views/client/verifications/new.html+mobile.slim
+++ b/app/views/client/verifications/new.html+mobile.slim
@@ -35,4 +35,4 @@
 .container.fixed-bottom.pt-2.pb-4.d-flex.justify-content-center.bg-white.footer-submit
   = simple_form_for verification, url: form_path, html: { multipart: true,  class: 'w-100', novalidate: false } do |f|
     = render 'hidden_fields', f: f
-    = f.submit t('.do_verification'), class: 'btn btn-primary flex-grow-1 w-100', data: { 'disable-with' => 'Отправляю..' }
+    = f.submit t('.do_verification'), class: 'btn btn-primary flex-grow-1 w-100', data: { 'disable-with' => t('.sending') }
