--- a/app/views/client/verifications/step2.html+mobile.slim
+++ b/app/views/client/verifications/step2.html+mobile.slim
@@ -25,7 +25,7 @@
 
   .container.fixed-bottom.pt-2.pb-4.d-flex.bg-white.footer-submit
     = f.input :next_step, as: :hidden, input_html: { value: 3 }
-    button type="submit" value='back' name='submit' class='btn btn-outline-primary font-weight-semibold w-100 mr-4' style='max-width: 130px' Назад
+    button type="submit" value='back' name='submit' class='btn btn-outline-primary font-weight-semibold w-100 mr-4' style='max-width: 130px' =t('client.verifications.new.back')
     = f.submit t('client.verifications.new.submit'), class: 'btn btn-primary w-100', data: { 'disable-with' => t('client.verifications.new.sending') }
 
   .mb-5.pb-5
