--- a/app/views/client/verifications/step4.html+mobile.slim
+++ b/app/views/client/verifications/step4.html+mobile.slim
@@ -1,5 +1,5 @@
 .d-flex.mt-4
-  h1.h4.w-25.m-0.font-weight-bold.small.text-primary Шаг 4 из 4
+  h1.h4.w-25.m-0.font-weight-bold.small.text-primary =t('client.verifications.new.step_x_from_y', current_step: 4, total_step: 4)
 
   .d-flex.align-items-center.w-75
     .progress.w-100 style="height: 4px"
@@ -22,13 +22,13 @@
       = document.input :file_cache, as: :hidden
       = document.input :document_type_id, as: :hidden
 
-  = render 'photo_instruction', first_point: 'Убедитесь, что Ваше лицо и все детали документов на фото четко видны'
+  = render 'photo_instruction', first_point: t('client.verifications.new.clear_face')
 
   .container.fixed-bottom.pt-2.pb-4.d-flex.bg-white.footer-submit
     = f.input :next_step, as: :hidden, input_html: { value: 5 }
 
-    button type="submit" value='back' name='submit' class='btn btn-outline-primary font-weight-semibold w-100 mr-4' style='max-width: 130px' Назад
-    = f.submit 'Продолжить', class: 'btn btn-primary w-100', data: { 'disable-with' => 'Отправляю..' }
+    button type="submit" value='back' name='submit' class='btn btn-outline-primary font-weight-semibold w-100 mr-4' style='max-width: 130px' =t('client.verifications.new.back')
+    = f.submit t('client.verifications.new.submit'), class: 'btn btn-primary w-100', data: { 'disable-with' => t('client.verifications.new.sending') }
 
 .mb-5.pb-5
 
