--- a/app/views/client/verifications/step1.html+mobile.slim
+++ b/app/views/client/verifications/step1.html+mobile.slim
@@ -13,7 +13,7 @@
       = document.input :file_cache, as: :hidden
       = document.input :document_type_id, as: :hidden
 
-    h3.h4.mt-4.mb-3.font-weight-bold.text-primary = t '.personal_data'
+    h3.h4.mt-4.mb-3.font-weight-bold.text-primary = t 'application.verifications.new.personal_data'
 
     = f.input :name
     = f.input :last_name
