--- a/app/views/client/verifications/new.html+desktop.slim
+++ b/app/views/client/verifications/new.html+desktop.slim
@@ -88,9 +88,9 @@
             .flex-shrink-0.mr-3.align-self-start
               = image_tag asset_url('desktop-verification/file-richtext@2x.png'), width: 13
             p.small.mb-0
-              = "Размер: #{number_to_human_size(Rails.configuration.application.min_upload_file_size)} до #{number_to_human_size(Rails.configuration.application.max_upload_file_size)}"
+              = t 'client.verifications.new.file_size', from: number_to_human_size(Rails.configuration.application.min_upload_file_size), to: number_to_human_size(Rails.configuration.application.max_upload_file_size)
               br
-              = "Формат: #{content_type_to_extensions(Rails.configuration.application.image_content_types)}"
+              = t 'client.verifications.new.format', formats: content_type_to_extensions(Rails.configuration.application.image_content_types)
 
           .border-top.my-3
 
@@ -104,6 +104,6 @@
     .col-md-8
     .col-md-4
       .text-right
-        = f.submit t('.submit'), class: 'btn btn-lg btn-primary w-100', data: { 'disable-with' => 'Отправляю..' }
+        = f.submit t('.submit'), class: 'btn btn-lg btn-primary w-100', data: { 'disable-with' => t('.sending') }
 
 = render 'photo_upload_script'
