--- a/app/views/client/verifications/new.html+desktop.slim
+++ b/app/views/client/verifications/new.html+desktop.slim
@@ -65,33 +65,32 @@
               .col-md-6.col-xl-5.mt-4.mt-xl-0
                 = render 'document_field', document: document
         .col-lg-12.col-xl-3
-          h3.text-primary.font-weight-bold.mt-4.mt-xl-0 Инструкция
+          h3.text-primary.font-weight-bold.mt-4.mt-xl-0 = t '.instruction'
 
           .d-flex.align-items-center.mt-3.mb-2
             .flex-shrink-0.mr-3.align-self-start
               = image_tag asset_url('desktop-verification/file-text@2x.png'), width: 13
             p.small.mb-0
-              | Убедитесь, что Ваше лицо и все детали документов на фото четко видны
+              = t '.clear_face'
 
           .d-flex.align-items-center.mb-2
             .flex-shrink-0.mr-3.align-self-start
               = image_tag asset_url('desktop-verification/file-earmark-check@2x.png'), width: 13
             p.small.mb-0
-              | Документ на фото размещен полностью, края не обрезаны
-
+              = t '.full_document'
           .d-flex.align-items-center.mb-2
             .flex-shrink-0.mr-3.align-self-start
               = image_tag asset_url('desktop-verification/file-x@2x.png'), width: 13
             p.small.mb-0
-              | На фото нет дополнительных объектов
+              = t '.no_objects'
 
           .d-flex.align-items-center.mb-2
             .flex-shrink-0.mr-3.align-self-start
               = image_tag asset_url('desktop-verification/file-richtext@2x.png'), width: 13
             p.small.mb-0
-              = "Размер: #{number_to_human_size(Rails.configuration.application.min_upload_file_size)} до #{number_to_human_size(Rails.configuration.application.max_upload_file_size)}"
+              = t 'client.verifications.new.file_size', from: number_to_human_size(Rails.configuration.application.min_upload_file_size), to: number_to_human_size(Rails.configuration.application.max_upload_file_size)
               br
-              = "Формат: #{content_type_to_extensions(Rails.configuration.application.image_content_types)}"
+              = t 'client.verifications.new.format', formats: content_type_to_extensions(Rails.configuration.application.image_content_types)
 
           .border-top.my-3
 
@@ -99,12 +98,12 @@
             .flex-shrink-0.mr-3.align-self-start
               = image_tag asset_url('desktop-verification/shield-lock@2x.png'), width: 13
             p.small.mb-0
-              | В случае необходимости служба поддержки может запросить дополнительную информацию, например - видео с документом
+              =t '.additional_documents'
 
   .row.my-5
     .col-md-8
     .col-md-4
       .text-right
-        = f.submit t('.submit'), class: 'btn btn-lg btn-primary w-100', data: { 'disable-with' => 'Отправляю..' }
+        = f.submit t('.submit'), class: 'btn btn-lg btn-primary w-100', data: { 'disable-with' => t('.sending') }
 
 = render 'photo_upload_script'
