--- a/app/views/client/verifications/new.html+desktop.slim
+++ b/app/views/client/verifications/new.html+desktop.slim
@@ -5,6 +5,7 @@
       h4.h6.font-weight-normal = verification.applicant.external_id
     div
       = image_tag asset_url('bz-logo.svg'), width: 40
+    =link_to I18n.locale.upcase, client_short_new_verification_url(locale: (I18n.locale == :ru ? 'en' : 'ru')), class: 'badge badge-light'
 
 = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
   .row
